--- a/src/main/resources/templates/portal/iv/hq/parts/export/order/create/write.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/order/create/write.html
@@ -68,7 +68,11 @@
 	<input type="hidden" id="blockReason" name="blockReason"/>
 	<input type="hidden" id="message" name="message"/>
 	<input type="hidden" id="pricingInfo" name="pricingInfo"/>
-	<input type="hidden" id="simulationFrom" name="simulationFrom"/>
+	
+	<input type="hidden" id="ohhSeq" name="ohhSeq" th:value="${orderHistoryHeader?.ohhSeq}"/>
+	<input type="hidden" id="refSeq" name="refSeq" th:value="${orderHistoryHeader?.refSeq}"/>
+	<input type="hidden" id="refSystem" name="refSystem" th:value="${orderHistoryHeader?.refSystem}"/>
+	<input type="hidden" id="simulationFrom" name="simulationFrom" th:value="${simulationFrom}"/>
 	
 	<table class="condition">
 		<tbody>
@@ -185,7 +189,7 @@
 		<table id="TBL_grid" class="order-column stripe compact"></table>
 	</div>
 <script>
-$("input:radio[name=docType][value='[[${docType}]]']").prop("checked", true);
+$("input:radio[name=docType][value='[[${orderHistoryHeader?.docType}]]']").prop("checked", true);
 
 var errorOrderItems;//시뮬레이션 후 에러 보고를 담아 둠
 var initialMaterialNos = [];
@@ -837,6 +841,7 @@ $(function(){
 				p.simulationFrom = $("#simulationFrom").val();
 				p.fgFilteringDuplicateItem = GLOBAL_CONST.YES;
 				p.fgFilteringInvalidSalesLotItem = GLOBAL_CONST.YES;
+				p.ohhSeq = $("#ohhSeq").val();
 
 				//Item
 				if ($("#fileName").val() == "")
@@ -947,7 +952,7 @@ $(function(){
 			_setPartAutocomplete(item, {
 				select: function(label, value, event)
 				{
-					doValidation();
+					doSimulation();
 				}
 			});
 		});
@@ -971,6 +976,23 @@ $(function(){
 		
 		ProgressBar.hide();
 	});
+});
+
+let fgDoneSimulation = GLOBAL_CONST.NO;
+$(document).ajaxStop(function() {
+	if (JpUtilsString.equals(fgDoneSimulation, GLOBAL_CONST.NO))
+	{
+		if (JpUtilsString.isNotEmpty("[[${simulationFrom}]]"))
+		{
+			if (JpUtilsString.equalsAny("[[${simulationFrom}]]", "CART"))//SB, CART 부터 주문 화면으로 이동한 경우 로딩과 함께 시뮬레이션
+			{
+				doSimulation();
+			};
+
+			//시뮬레이션이 무한 반복되는 것을 방지하기 위해 상태를 변경해 줌
+			fgDoneSimulation = GLOBAL_CONST.YES;
+		};
+	};
 });
 </script>
 </th:block>
