--- a/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
+++ b/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
@@ -25,7 +25,7 @@
 	</div>
 	<div class="field">
 		<label>Password Valid Period (Days)</label>
-		<input type="number" name="pwdValidPeriod" min="0" oninput="validity.valid||(value='');" th:value="${credentialsPolicy.pwdValidPeriod}" placeholder="Days"/>
+		<input type="number" name="pValidPeriod" min="0" oninput="validity.valid||(value='');" th:value="${credentialsPolicy.pValidPeriod}" placeholder="Days"/>
 	</div>	
 	<div class="field">
 		<div class="ui checkbox">
@@ -73,7 +73,7 @@
 			</div>
 		</div>
 		<div class="field">
-			<div class="ui checkbox u-fg-only-uppercase">
+			<div class="ui checkbox uFgOnlyUppercase">
 				<input type="checkbox" name="uFgOnlyUppercase" class="hidden" th:value="${T(org.jwebppy.platform.core.PlatformCommonVo).YES}" th:checked="${credentialsPolicy.uFgOnlyUppercase == T(org.jwebppy.platform.core.PlatformCommonVo).YES}" >
 				<label>Use Only Upper Case</label>
 			</div>
@@ -111,8 +111,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	
+	</div>	
 	<div class="ui tab attached segment teal" data-tab="password">
 		<div class="field">
 			<label class="required">Length</label>
@@ -168,6 +167,26 @@
 					<input type="number" name="pMaxSpecial" th:value="${credentialsPolicy.pMaxSpecial}" placeholder="Max."/>
 				</div>
 			</div>
+		</div>
+		<div class="field">
+			<div class="ui checkbox p-fg-use-pwd-fail-penalty">
+				<input type="checkbox" name="fgUsePwdFailPenalty" class="hidden" th:value="${T(org.jwebppy.platform.core.PlatformCommonVo).YES}" th:checked="${credentialsPolicy.fgUsePwdFailPenalty == T(org.jwebppy.platform.core.PlatformCommonVo).YES}" >
+				<label>Use Password Failure Penalty</label>
+			</div>
+		</div>
+		<div class="fields">
+			<div class="eight wide field">
+				<label>Allowable Failure Count</label>
+				<div class="field">
+					<input type="number" name="pAllowableFailCount" th:value="${credentialsPolicy.pAllowableFailCount}" placeholder="Count"/>
+				</div>
+			</div>
+			<div class="eight wide field">
+				<label>Check Duration(sec.)</label>
+				<div class="field">
+					<input type="number" name="pFailCheckDuration" th:value="${credentialsPolicy.pFailCheckDuration}" placeholder="Duration(Sec.)"/>
+				</div>
+			</div>			
 		</div>
 	</div>
 	<div class="ui divider"></div>
@@ -271,7 +290,21 @@ $(document).ready(function() {
 			$("#uMinUppercase").attr("disabled", false);
 			$("#uMaxUppercase").attr("disabled", false);			
 		};
-	};	
+	};
+	
+	$(".ui.checkbox.p-fg-use-pwd-fail-penalty").checkbox({
+		onChecked: function()
+		{
+			$(".BTN_save").trigger("click");
+		},
+		onUnchecked: function()
+		{
+			let obj = $("input[name=pAllowableFailCount], input[name=pFailCheckDuration]").closest(".field"); 
+			
+			obj.removeClass("error");
+			obj.find(".prompt").remove();
+		}
+	});	
 	
 	$("#FORM_write").form(formValidCheck);
 	
@@ -304,7 +337,7 @@ $(document).ready(function() {
 	if (JpUtilsString.equals("[[${credentialsPolicy.uFgOnlyUppercase}]]", "Y"))
 	{
 		enabledUsernameOnlyUppercase(true);
-	};	
+	};
 });
 
 let formValidCheck = {
@@ -358,24 +391,47 @@ let formValidCheck = {
 						prompt: "Please enter a maximum length of password."
 					}
 				]
+			},
+			pAllowableFailCount: {
+				identifier: "pAllowableFailCount",
+				rules: [
+					{
+						type: "checkAllowableFailCount",
+						prompt: "Please input Allowable Failure Count."
+					}
+				]
+			},
+			pFailCheckDuration: {
+				identifier: "pFailCheckDuration",
+				rules: [
+					{
+						type: "checkFailCheckDuration",
+						prompt: "Please input Check Duration(sec.)."
+					}
+				]
 			}
 		},
 		keyboardShortcuts: false
 };
-	
+
 $.fn.form.settings.rules.checkName = function() {
+	let name = $("#FORM_write input[name=name]").val();
+	
+	if (JpUtilsString.isEmpty(name))
+	{
+		return false;		
+	};
+	
 	let isValid = false;
 	
 	JpUtilsAjax.get({
 		url: "/platform/mgmt/user/credentials/policy/check/valid_name",
-		data: { cpSeq: $("#cpSeq").val(), name: $("#FORM_write input[name=name]").val() },
+		data: { cpSeq: $("#cpSeq").val(), name: name },
 		global: false,
 		async: false,
 		success: function(data, textStatus, jqXHR)
 		{
 			let result = data.RESULT;
-			
-			console.log(result);
 			
 			if (result == "S")
 			{
@@ -385,6 +441,28 @@ $.fn.form.settings.rules.checkName = function() {
 	});
 
 	return isValid;	
+};
+
+$.fn.form.settings.rules.checkAllowableFailCount = function() {
+	let checked = $(".ui.checkbox.p-fg-use-pwd-fail-penalty").checkbox("is checked");
+	
+	if (checked && JpUtilsString.isEmpty($("input[name=pAllowableFailCount]").val()))
+	{
+		return false;		
+	};
+		
+	return true;
+};
+
+$.fn.form.settings.rules.checkFailCheckDuration = function() {
+	let checked = $(".ui.checkbox.p-fg-use-pwd-fail-penalty").checkbox("is checked");
+	
+	if (checked && JpUtilsString.isEmpty($("input[name=pFailCheckDuration]").val()))
+	{
+		return false;		
+	};
+		
+	return true;
 };	
 </script>
 </th:block>
