Inquiry 선택 불가 오류 수정

--- a/src/main/resources/templates/portal/iv/hq/parts/export/order/create/write.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/order/create/write.html
@@ -189,7 +189,7 @@
 		<table id="TBL_grid" class="order-column stripe compact"></table>
 	</div>
 <script>
-$("input:radio[name=docType][value='[[${orderHistoryHeader?.docType}]]']").prop("checked", true);
+$("input:radio[name=docType][value='[[${docType}]]']").prop("checked", true);
 
 var errorOrderItems;//시뮬레이션 후 에러 보고를 담아 둠
 var initialMaterialNos = [];
