프로모션 배너 슬라이더 개선

--- a/src/main/resources/static/portal/css/layout/iv/hq/parts/main.css
+++ b/src/main/resources/static/portal/css/layout/iv/hq/parts/main.css
@@ -712,7 +712,7 @@ a.link:hover {text-decoration: underline; color: #4183C4; cursor: pointer;}
 
 .slick-img {
 	width: 420px;
-	height: 400px;
+	/*height: 400px;*/
 	margin-top: 10px;
 	border-radius: 15px;
 	opacity: 0.8;
