Credentials Policy 조회 화면 개발

--- a/src/main/resources/templates/platform/mgmt/user/credentials/policy/list.html
+++ b/src/main/resources/templates/platform/mgmt/user/credentials/policy/list.html
@@ -55,7 +55,7 @@ $(document).ready(function() {
 			{
 				if (columnIndex == 1)
 				{
-					goWrite(key);	
+					goView(key);	
 				}
 				else if (columnIndex == 5)
 				{
@@ -100,6 +100,13 @@ $(document).ready(function() {
 			doSearch();
 		}
 	});
+
+	function goView(cpSeq)
+	{
+		JpUiPopup.open({
+			url: "/platform/mgmt/user/credentials/policy/view?cpSeq=" + JpUtilsString.trimToEmpty(cpSeq)
+		});			
+	};
 	
 	function goWrite(cpSeq)
 	{
