--- a/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
+++ b/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
@@ -11,6 +11,7 @@
 <div class="ui one column grid">
 	<div class="column">
 		<div class="ui teal button BTN_save"><i class="check icon"></i> Save</div>
+		<div class="ui button BTN_back"><i class="arrow left icon"></i> Back</div>
 	</div>
 </div>
 <div class="ui divider"></div>
@@ -23,10 +24,6 @@
 		<label>Description</label>
 		<textarea name="description" th:text="${credentialsPolicy.description}" rows="3"></textarea>
 	</div>
-	<div class="field">
-		<label>Password Valid Period (Days)</label>
-		<input type="number" name="pValidPeriod" min="0" oninput="validity.valid||(value='');" th:value="${credentialsPolicy.pValidPeriod}" placeholder="Days"/>
-	</div>	
 	<div class="field">
 		<div class="ui checkbox">
 			<input type="checkbox" name="fgUse" class="hidden" th:value="${T(org.jwebppy.platform.core.PlatformCommonVo).YES}" th:checked="${credentialsPolicy.fgUse == T(org.jwebppy.platform.core.PlatformCommonVo).YES}" >
@@ -169,6 +166,10 @@
 			</div>
 		</div>
 		<div class="field">
+			<label>Password Valid Period (Days)</label>
+			<input type="number" name="pValidPeriod" min="0" oninput="validity.valid||(value='');" th:value="${credentialsPolicy.pValidPeriod}" placeholder="Days"/>
+		</div>		
+		<div class="field">
 			<div class="ui checkbox p-fg-use-pwd-fail-penalty">
 				<input type="checkbox" name="fgUsePwdFailPenalty" class="hidden" th:value="${T(org.jwebppy.platform.core.PlatformCommonVo).YES}" th:checked="${credentialsPolicy.fgUsePwdFailPenalty == T(org.jwebppy.platform.core.PlatformCommonVo).YES}" >
 				<label>Use Password Failure Penalty</label>
@@ -193,6 +194,7 @@
 	<div class="ui one column grid">
 		<div class="column">
 			<div class="ui teal button BTN_save"><i class="check icon"></i> Save</div>
+			<div class="ui button BTN_back"><i class="arrow left icon"></i> Back</div>
 		</div>
 	</div>		
 </div>
@@ -320,7 +322,8 @@ $(document).ready(function() {
 					{
 						try
 						{
-							opener.doSearch();	
+							opener.doSearch();
+							goBack();
 						}
 						catch (e) {}
 					};
@@ -337,6 +340,15 @@ $(document).ready(function() {
 	if (JpUtilsString.equals("[[${credentialsPolicy.uFgOnlyUppercase}]]", "Y"))
 	{
 		enabledUsernameOnlyUppercase(true);
+	};
+	
+	$(".BTN_back").on("click", function() {
+		goBack();
+	});
+	
+	function goBack()
+	{
+		document.location.href = JpUtilsPath.url("/platform/mgmt/user/credentials/policy/view?cpSeq=[[${cpSeq}]]");		
 	};
 });
 
