--- a/src/main/resources/static/platform/css/basic.css
+++ b/src/main/resources/static/platform/css/basic.css
@@ -1,3 +1,8 @@
 .uppercase {
 	text-transform:uppercase	
 }
+
+.column-padding {
+	padding-top: 0.5rem !important;
+	padding-bottom: 0.5rem !important;
+}
